--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -14,6 +14,7 @@
                     <option value="google_translate">Google переводчик</option>
                     <option value="ChatGPT3.5">ChatGPT3.5</option>
                     <option value="yandex_translate">Yandex переводчик</option>
+                    <option value="Reserso">Reserso</option>
                 </select>
             </div>
             <div>
@@ -38,8 +39,8 @@
             <div><textarea id="translated-text"></textarea></div>
             <div id="translate-refresh">
                 <button class="button" id="translate-button">Вставить</button>
-                <button id="refresh-button">
-                    <img src="static/refresh.png" alt="Refresh" />  
+                <button id="refresh-button" class="button">
+                    <img src="static/refresh.png" alt="Refresh" id="refresh-picture"/>  
                 </button>
             </div>                     
             <div><button class="button" id="translate-all-button">Перевести все</button></div>
