--- a/static/style.css
+++ b/static/style.css
@@ -185,6 +185,63 @@ background-color:#67F38E;
     align-items: center;
 
 }
-#refresh-picture{
-
+.switch input
+{
+  display: none;
 }
+
+.switch
+{
+  display: inline-block;
+  width: 60px; /*=w*/
+  height: 30px; /*=h*/
+  transform: translateY(50%);
+  position: relative;
+  margin-bottom:5px;
+}
+
+.slider
+{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 30px;
+  box-shadow: 0 0 0 2px #C5DBF0, 0 0 4px #C5DBF0;
+  cursor: pointer;
+  border: 4px solid transparent;
+  overflow: hidden;
+  transition: 0.2s;
+}
+
+.slider:before
+{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #C5DBF0;
+  border-radius: 30px;
+  transform: translateX(-30px); /*translateX(-(w-h))*/
+  transition: 0.2s;
+}
+
+input:checked + .slider:before
+{
+  transform: translateX(30px); /*translateX(w-h)*/
+  background-color: #004953;
+}
+
+input:checked + .slider
+{
+  box-shadow: 0 0 0 2px #004953, 0 0 8px #004953;
+}
+#colorPicker{
+margin-top:12px;
+}
+#textColorPicker{
+margin:5px;}
+
+
+
